<resources>
    <!--GENERAL-->
    <string name="app_name">Remembeer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="txt_version">Version 1.0\n\nRemembeer\n\nAlbain Dufils\nLouise Bretz\n\nNovembre 2020</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!--Titre des boutons-->
    <string name="btn_beer">Bière</string>
    <string name="btn_brewery">Brasserie</string>
    <string name="dark_mode">Dark mode</string>
    <string name="langage">Langue</string>

    <!--Titre des pages-->
    <string name="title_page_beers">Liste des bières</string>
    <string name="title_page_brewery">Liste des brasseries</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_page_favoris">Favoris</string>
    <string name="title_page_hof">Hall of fame</string>
    <string name="title_page_settings">Reglages</string>
    <string name="title_page_about">A propos</string>
    <string name="action_settings">Réglages</string>
    <string name="menu_search">Recherche</string>
    <string name="menu_home">Accueil</string>
    <string name="menu_about">A propos</string>
    <string name="menu_gallery">Gallerie</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_hall_of_fame">HallOfFameActivity</string>


    <!--Titre / sous-pages -->
    <string name="titre_description">Description</string>
    <string name="titre_name">Nom</string>
    <string name="titre_origin">De</string>
    <string name="beer_details">Details</string>
    <string name="beer_edit">Modification</string>
    <string name="brewery_edit">Modification</string>
    <string name="brewery_details">Details</string>

    <!-- Autres / Test -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="beer_delete_title">Supprimer une bière ?</string>
    <string name="brewery_delete_title">Supprimer une brasserie ?</string>
    <string name="beer_delete_message">Voulez-vous supprimer la bière (%1$s) ?</string>
    <string name="brewery_delete_message">Voulez-vous supprimer la brasserie (%1$s) ?</string>
    <string name="message_in_progress">Fonctionnalité bientôt disponible\nRestez connnecté·e</string>



    <string name="txt_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
        do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="titre_image">Image</string>


</resources>