<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/loupe_0"
            android:title="@string/menu_search" />
        <item
            android:id="@+id/nav_beers"
            android:icon="@drawable/beer_1"
            android:title="@string/title_page_beers" />
        <item
            android:id="@+id/nav_brewery"
            android:icon="@drawable/brewery_1"
            android:title="@string/title_page_brewery" />
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/star_0"
            android:title="@string/title_page_favoris" />
<!--        <item-->
<!--            android:id="@+id/nav_settings"-->
<!--            android:icon="@drawable/settings_0"-->
<!--            android:title="@string/action_settings" />-->
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/info"
            android:title="@string/title_page_about"
            />
    </group>
</menu>