<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/background_color_light"
    tools:context=".ui.beer.BeerEditActivity">
    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/titre_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titre_image"
                    style="@style/text_titre"/>
                <ImageView
                    android:id="@+id/beer_photo"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    />

                <ImageButton
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@color/background_color_dark"
                    android:onClick="changePicture"
                    android:src="@android:drawable/stat_sys_download"
                    android:layout_marginBottom="30dp"/>

                <TextView
                    android:id="@+id/titre_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titre_name"
                    style="@style/text_titre"/>
                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/titre_name"
                    android:inputType="text"
                    style="@style/edit_text" />
                <TextView
                    android:id="@+id/titre_from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titre_origin"
                    style="@style/text_titre" />
                <EditText
                    android:id="@+id/edit_from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/titre_origin"
                    android:inputType="text"
                    style="@style/edit_text" />
                <TextView
                    android:id="@+id/titre_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/titre_description"
                    style="@style/text_titre"/>
                <EditText
                    android:id="@+id/edit_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/titre_description"
                    android:inputType="textMultiLine"
                    android:minLines="10"
                    android:scrollbars="vertical"
                    style="@style/edit_text"/>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fl_save_beer"
        android:onClick="saveCliqued"
        style="@style/floating_action"
        android:src="@drawable/save_yellow" />

</FrameLayout>

